--- a/DJIVideoStreamAnalysis/app/src/main/AndroidManifest.xml
+++ b/DJIVideoStreamAnalysis/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="ru.kpfu.itis.robotics.dji_video_stream_analysis">
+    package="ru.kpfu.itis.robotics.djivideostreamanalysis">
 
     <!-- DJI Mobile SDK permissions -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -66,11 +66,14 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
         <activity
             android:name=".view.VideoStreamActivity"
             android:screenOrientation="landscape" >
