--- a/DJIVideoStreamAnalysis/app/build.gradle
+++ b/DJIVideoStreamAnalysis/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "ru.kpfu.itis.robotics.dji_video_stream_analysis"
+        applicationId "ru.kpfu.itis.robotics.djivideostreamanalysis"
         minSdkVersion 19
         targetSdkVersion 27
         multiDexEnabled true
@@ -28,8 +28,11 @@ android {
     }
     sourceSets {
         main {
-            jni.srcDirs=[]
-            jniLibs.srcDirs=['../libs']
+            jni.srcDirs = ['../jni']
+// Causes com.android.builder.merge.DuplicateRelativeFileException:
+// More than one file was found with OS independent path 'lib/arm64-v8a/libdjivideojni.so'
+// Solution explained here: https://stackoverflow.com/a/44962630
+//            jniLibs.srcDirs = ['../libs']
         }
     }
     dexOptions {
@@ -45,7 +48,13 @@ android {
         doNotStrip "*/*/libFRCorkscrew.so"
         doNotStrip "*/*/libUpgradeVerify.so"
         doNotStrip "*/*/libFR.so"
+
         exclude 'META-INF/rxjava.properties'
+    }
+    externalNativeBuild {
+        ndkBuild {
+            path '../jni/Android.mk'
+        }
     }
 }
 
