--- a/DJIVideoStreamAnalysis/app/src/main/AndroidManifest.xml
+++ b/DJIVideoStreamAnalysis/app/src/main/AndroidManifest.xml
@@ -71,13 +71,8 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
-            android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
-        <activity
             android:name=".view.VideoStreamActivity"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
